--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
 }
 
 .content {
-  height: 100vh;
+  flex: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
