--- a/src/components/SearchMovies.css
+++ b/src/components/SearchMovies.css
@@ -6,7 +6,8 @@
     gap: 50px;
     width: 462px;
     height: 334.77px;
-    margin: auto;
+    margin: 280px auto;
+    margin-bottom: 0;
 }
 
 .search-title {
