--- a/src/components/MovieDisplayer.css
+++ b/src/components/MovieDisplayer.css
@@ -11,7 +11,7 @@
 .movie-card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 40px;
     width: 1360px;
