--- a/src/components/SearchMovie.css
+++ b/src/components/SearchMovie.css
@@ -4,23 +4,67 @@
     align-items: center;
     padding: 0px;
     gap: 50px;
+    position: absolute;
     width: 462px;
     height: 334.77px;
-    margin: 280px auto;
-    margin-bottom: 0;
+    left: 489px;
+    top: 345px;
+}
+
+.search-pic-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0px;
+    gap: 24px;
+
+    width: 321.23px;
+    height: 200.77px;
+}
+
+.search-pic-container img {
+    width: 270px;
+    height: 167px;
+}
+
+.search-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 20px;
+    margin: 0;
+
+    width: 462px;
+    height: 84px;
+
 }
 
 .search-title {
+    width: 224px;
+    height: 24px;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
+    margin: 0;
+
+    color: #FFFFFF;
 }
 
 .search-box input {
     width: 462px;
     height: 40px;
+
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    color: white;
+  
+    border: 1px solid #363B3F;
+    border-radius: 12px;
 }
 
-.search-box img {
-    width: 270px;
+.search-form form {
+    margin: 0;
 }
