--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,18 +1,3 @@
-span.red {
-    color: #D81F26;
-    font-weight: 400;
-}
-
-.concealed-title {
-    font-weight: 600;
-    font-size: 23.1px;
-    line-height: 27.96px;
-}
-
-.concealed-title:hover {
-    cursor: pointer;
-}
-
 .header {
     display: flex;
     flex-direction: row;
@@ -21,18 +6,60 @@ span.red {
     padding: 0px 40px;
     gap: 171px;
 
+    position: absolute;
     width: 1440px;
     height: 32px;
-    margin: 33px auto;
-    margin-bottom: 0;
+    left: 0px;
+    top: 33px;
 
 }
 
+.title-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 13.2px;
+
+    width: 225.2px;
+    height: 28px;
+}
+
+h1.concealed-title {
+    font-weight: 600;
+    font-size: 23.1px;
+    line-height: 27.96px;
+    margin: 0;
+    padding: 0;
+}
+
+h1.concealed-title.red {
+    width: 68px;
+    height: 28px;
+    font-weight: 400;
+    font-size: 23.1px;
+    line-height: 28px;
+    color: #D81F26;
+}
+
+
+.concealed-title:hover {
+    cursor: pointer;
+}
+
+
 .header-nav {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    height: 40px;
+    padding: 0px;
+    gap: 26px;
+}
+
+.header-nav > img {
+    width: 24px;
+    height: 24px;
 }
 
 .header-search {
@@ -42,7 +69,16 @@ span.red {
 
 .profile-icon-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
+    padding: 0px;
     gap: 8px;
     width: 64px;
+    height: 32px;
+}
+
+.profile-pic {
+    width: 32px;
+    height: 32px;
+    border-radius: 5px;
 }
