--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -8,7 +8,12 @@
 
     width: 272px;
     height: 32px;
-    margin: 80px auto;
+}
+
+.pagination-nav span {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
 }
 
 .page-selector:hover {
