--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -18,34 +18,71 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    align-self: stretch;
+    flex-grow: 1;
     margin: 0;
 
 }
 
 .movie-info {
-    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 18px;
+
+    width: 228px;
+    height: 96px;
 }
 
-.movie-title {
-    font-weight: 400;
+.movie-info-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 8px;
+
+    width: 228px;
+    height: 48px;
+    flex-grow: 0;
+}
+
+.movie-info-text h4 {
+    width: 100%;
+    height: 22px;
     margin: 0;
+    white-space: nowrap;
+    overflow-x: hidden;
+
+    font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+
+    color: #FFFFFF;
+
 }
 
-.movie-specs {
+.movie-info-text p {
+    width: 100%;
+    height: 18px;
+    margin: 0;
+    white-space: nowrap;
+    overflow-x: hidden;
+
     font-weight: 400;
     font-size: 15px;
-    margin-top: 0;
     line-height: 18px;
-    text-overflow: clip;
+
     color: rgba(255, 255, 255, 0.6);
+
 }
 
 .rating {
+
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     padding: 6px 8px;
     gap: 10px;
 
@@ -54,10 +91,13 @@
 
     background: rgba(255, 255, 255, 0.08);
     border-radius: 8px;
+
 }
 
 .rating p {
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
+    margin: 0;
+    white-space: nowrap;
 }
