--- a/src/components/MovieDisplayer.css
+++ b/src/components/MovieDisplayer.css
@@ -6,11 +6,11 @@
     padding: 0px;
     gap: 44px;
 
-    position: absolute;
+    margin: auto;
+    margin-top: 64px;
+
     width: 1360px;
     height: 47px;
-    left: 40px;
-    top: 129px;
 }
 
 .result-description {
@@ -31,8 +31,6 @@
     padding: 0;
     white-space: nowrap;
 
-    font-family: 'Inter';
-    font-style: normal;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -85,11 +83,11 @@
     padding: 0px;
     gap: 60px;
 
-    position: absolute;
+    margin: auto;
+    margin-top: 44px;
+
     width: 1360px;
     height: 1096px;
-    left: 40px;
-    top: 220px;
 }
 
 .cards-container {
