--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -60,20 +60,52 @@ h1.concealed-title.red {
 
 .header-nav > form {
     position: relative;
-}
 
-.header-search {
     box-sizing: border-box;
+
+    /* Auto layout */
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 8px 12px;
+    gap: 8px;
+
     width: 284px;
     height: 40px;
-    color: #F9F6F1;
+
+    border: 1px solid rgba(102, 105, 106, 0.2);
+    border-radius: 12px;
+}
+
+.header-nav > form img {
+    width: 24px;
+    height: 24px;
+}
+
+.header-nav > form img:hover {
+    cursor: pointer;
+}
+
+.close-search {
+    width: 16px;
+    height: 16px;
+}
+
+
+
+.header-search {
+    width: 228px;
+    height: 24px;
+    padding: 0px;
+    background-color:transparent;
+    border: none;
+    border-radius: 0%;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.01em;
-    background-color: transparent;
-    border: 1px solid rgba(102, 105, 106, 0.2);
-    border-radius: 12px;
+    color: #F9F6F1;
 }
 
 .header-search:focus {
@@ -86,8 +118,8 @@ h1.concealed-title.red {
     z-index: 1;
     width: 284px;
     height: 120px;
-    left: 0px;
-    top: 40px;
+    left: -1px;
+    top: 39px;
 
     border-radius: 0px 0px 8px 8px;
 }
