--- a/src/components/MovieDisplayer.css
+++ b/src/components/MovieDisplayer.css
@@ -107,7 +107,8 @@
     align-items: center;
     padding: 0px;
     gap: 8px;
-    margin: 60px;
+    margin-top: 60px;
+    margin-bottom: 80px;
     width: 1360px;
     height: 32px;
 }
