--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -173,3 +173,24 @@ h1.concealed-title.red {
     height: 32px;
     border-radius: 5px;
 }
+
+@media only screen and (max-width: 1440px) {
+    .header {
+        width: 1000px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .header {
+        width: 600px;
+       overflow: hidden;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .header {
+        width: 100%;
+       overflow: hidden;
+    }
+}
+
