--- a/src/components/SearchMovie.css
+++ b/src/components/SearchMovie.css
@@ -104,7 +104,7 @@
     
     .search-pic-container img {
         max-width: 90vw;
-        height: 167px;
+        height: auto;
     }
     
     .search-form {    
