--- a/src/components/MovieCard.css
+++ b/src/components/MovieCard.css
@@ -21,6 +21,14 @@
     flex-grow: 1;
     margin: 0;
 
+    box-shadow: none;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.movie-poster:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.2);
+    
 }
 
 .movie-info {
