--- a/src/components/DetailsDisplayer.css
+++ b/src/components/DetailsDisplayer.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.small-details-container {
+    display: none;
+}
+
 .details-container {
     display: flex;
     flex-direction: row;
@@ -14,7 +18,6 @@
     gap: 125px;
 
     width: 1125px;
-    min-height: 1004px;
 }
 
 .details-poster {
@@ -86,6 +89,7 @@
 .credits {
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
     gap: 60px
 }
 
@@ -93,3 +97,105 @@
     color: rgba(255, 255, 255, 0.6);
     font-weight: 200;
 }
+
+@media only screen and (max-width: 1440px){
+    .details-container {
+        width: 900px;
+        gap: 50px;
+    }
+
+    .details-poster {
+        width: 425px;
+    }
+
+    .details-info-container {
+        gap: 25px;
+    }
+    
+}
+
+@media only screen and (max-width: 1000px){
+    .details-container {
+        display: none;
+    }
+    
+    .small-details-container {
+        display: block;
+        width: 500px;
+        margin: 100px auto 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 30px;
+    }
+
+    .small-general-info {
+        display: flex;
+        align-items: flex-start;
+        gap: 25px;
+    }
+
+    .extra-small-rating {
+        display: none;
+    }
+
+    .small-details-poster {
+        width: 200px;
+    }
+
+    .small-general-info-text {
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        gap: 15px
+    }
+
+    .small-rating {
+        display: flex;
+        flex-direction: column;
+        gap: 15px
+    }
+
+    .small-text-details {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 600px){
+
+    .small-details-container {
+        width: 90vw;
+    }
+
+    .small-details-poster {
+        width: 100px;
+    }
+}
+
+
+@media only screen and (max-width: 500px){
+
+    .small-rating {
+        display: none;
+    }
+
+    .extra-small-rating {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+@media only screen and (max-width: 400px){
+
+    .credits {
+        flex-direction: column;
+        gap:20px
+    }
+}
+
+
